update run configs

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,7 +27,7 @@ params{
 singularity {
   autoMounts = true
   enabled    = true
-  runOptions = "-B /tmp"
+  runOptions = "-B /tmp,/mnt"
   cacheDir   = '/mnt/scratch/singularity'
 }
 
