make custom database and labels possible

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ manifest {
     homePage         = ''
     description      = 'Run Kallisto on a folder of BAM-files for hominin mtDNA analysis'
     nextflowVersion  = '>=22.10'
-    version          = 'v0.1'
+    version          = 'v0.2-pre'
 }
 
 cleanup = true
@@ -22,6 +22,7 @@ params{
     // file input 
     split     = ""                                             // a folder with bam files
     database  = "${projectDir}/assets/kallisto_index_k21.idx"  // a folder with the Kallisto database, Zavala2021-version provided in assets
+    labels    = "${projectDir}/assets/labels.tsv"
 }
 
 singularity {
