Add Hyaenidae reference panel

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ manifest {
     homePage         = ''
     description      = 'Run Kallisto on a folder of BAM-files for hominin mtDNA analysis'
     nextflowVersion  = '>=22.10'
-    version          = 'v0.2-pre'
+    version          = 'v0.2'
 }
 
 cleanup = true
