--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -7,4 +7,9 @@ profiles {
         params.database  = "${projectDir}/assets/Hominidae/kallisto_index_k21.idx"  // a folder with the Kallisto database, Zavala2021-version provided in assets
         params.labels    = "${projectDir}/assets/Hominidae/labels.tsv"
     }
+    Hyaenidae {
+        // a folder with bam files
+        params.database  = "${projectDir}/assets/Hyaenidae/Hyaenidae_k21.idx"
+        params.labels    = "${projectDir}/assets/Hyaenidae/labels.tsv"
+    }
 }
