add ovis index (testing)

--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -3,13 +3,15 @@ profiles {
         cleanup = false
     }
     Hominidae {
-        // a folder with bam files
         params.database  = "${projectDir}/assets/Hominidae/kallisto_index_k21.idx"  // a folder with the Kallisto database, Zavala2021-version provided in assets
         params.labels    = "${projectDir}/assets/Hominidae/labels.tsv"
     }
     Hyaenidae {
-        // a folder with bam files
         params.database  = "${projectDir}/assets/Hyaenidae/Hyaenidae_k21.idx"
         params.labels    = "${projectDir}/assets/Hyaenidae/labels.tsv"
+    }
+    Ovis {
+        params.database  = "${projectDir}/assets/Ovis/Ovis_k21.idx"
+        params.labels    = "${projectDir}/assets/Ovis/labels.tsv"
     }
 }
