add Ursidae database

--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -10,6 +10,10 @@ profiles {
         params.database  = "${projectDir}/assets/Hyaenidae/Hyaenidae_k21.idx"
         params.labels    = "${projectDir}/assets/Hyaenidae/labels.tsv"
     }
+    Ursidae {
+        params.database  = "${projectDir}/assets/Ursidae/Ursidae_k21.idx"
+        params.labels    = "${projectDir}/assets/Ursidae/labels.tsv"
+    }
     Ovis {
         params.database  = "${projectDir}/assets/Ovis/Ovis_k21.idx"
         params.labels    = "${projectDir}/assets/Ovis/labels.tsv"
