--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -14,6 +14,10 @@ profiles {
         params.database  = "${projectDir}/assets/Ursidae/Ursidae_k21.idx"
         params.labels    = "${projectDir}/assets/Ursidae/labels.tsv"
     }
+    Cervidae {
+        params.database  = "${projectDir}/assets/Cervidae/Cervidae_k21.idx"
+        params.labels    = "${projectDir}/assets/Cervidae/labels.tsv"
+    }
     Ovis {
         params.database  = "${projectDir}/assets/Ovis/Ovis_k21.idx"
         params.labels    = "${projectDir}/assets/Ovis/labels.tsv"
