--- a/conf/profiles.config
+++ b/conf/profiles.config
@@ -5,21 +5,26 @@ profiles {
     Hominidae {
         params.database  = "${projectDir}/assets/Hominidae/kallisto_index_k21.idx"  // a folder with the Kallisto database, Zavala2021-version provided in assets
         params.labels    = "${projectDir}/assets/Hominidae/labels.tsv"
+        params.outdir    = "kallisto_hominidae"
     }
     Hyaenidae {
         params.database  = "${projectDir}/assets/Hyaenidae/Hyaenidae_k21.idx"
         params.labels    = "${projectDir}/assets/Hyaenidae/labels.tsv"
+        params.outdir    = "kallisto_hyaenidae"
     }
     Ursidae {
         params.database  = "${projectDir}/assets/Ursidae/Ursidae_k21.idx"
         params.labels    = "${projectDir}/assets/Ursidae/labels.tsv"
+        params.outdir    = "kallisto_ursidae"
     }
     Cervidae {
         params.database  = "${projectDir}/assets/Cervidae/Cervidae_k21.idx"
         params.labels    = "${projectDir}/assets/Cervidae/labels.tsv"
+        params.outdir    = "kallisto_cervidae"
     }
     Ovis {
         params.database  = "${projectDir}/assets/Ovis/Ovis_k21.idx"
         params.labels    = "${projectDir}/assets/Ovis/labels.tsv"
+        params.outdir    = "kallisto_ovis"
     }
 }
