--- a/nextflow.config
+++ b/nextflow.config
@@ -21,8 +21,10 @@ nextflow.enable.moduleBinaries = true
 params{
     // file input 
     split     = ""                                             // a folder with bam files
-    database  = "${projectDir}/assets/kallisto_index_k21.idx"  // a folder with the Kallisto database, Zavala2021-version provided in assets
-    labels    = "${projectDir}/assets/labels.tsv"
+    database  = ""  // a folder with the Kallisto database, Zavala2021-version provided in assets
+    labels    = ""
+    kallisto_mask = 25
+    outdir    = ""
 }
 
 singularity {
@@ -35,14 +37,14 @@ singularity {
 process {
     withName:"KALLISTO_QUANT" {
         publishDir = [
-            path: { "out/${meta.id}/" },
+            path: { "${params.outdir}/out/${meta.id}/" },
             mode: "copy",
             pattern: "*"
         ]
     }
     withName:"SUMMARIZE_KALLISTO" {
         publishDir = [
-            path: { "${launchDir}" },
+            path: { "${launchDir}/${params.outdir}" },
             mode: "copy",
             pattern: "*"
         ]
