Add option to trim sequences before kallisto

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,7 @@ params{
     split     = ""                                             // a folder with bam files
     database  = ""  // a folder with the Kallisto database, Zavala2021-version provided in assets
     labels    = ""
+    trim      = 3
     kallisto_mask = 25
     outdir    = ""
 }
