add upper length cutoff

--- a/nextflow.config
+++ b/nextflow.config
@@ -24,6 +24,7 @@ params{
     database  = ""  // a folder with the Kallisto database, Zavala2021-version provided in assets
     labels    = ""
     trim      = 3
+    maxlen    = 50
     kallisto_mask = 25
     outdir    = ""
 }
@@ -36,6 +37,12 @@ singularity {
 
 
 process {
+    withName:"SAMTOOLS_VIEW" {
+        ext.args = [
+            "-m ${params.maxlen}",
+        ].join(" ")
+    }
+
     withName:"KALLISTO_QUANT" {
         publishDir = [
             path: { "${params.outdir}/out/${meta.id}/" },
