fix filtering by min-length instead of max-length

--- a/nextflow.config
+++ b/nextflow.config
@@ -37,9 +37,9 @@ singularity {
 
 
 process {
-    withName:"SAMTOOLS_VIEW" {
+    withName: "SAMTOOLS_VIEW" {
         ext.args = [
-            "-m ${params.maxlen}",
+            "--expr", "\"length(seq) <= ${params.maxlen}\""
         ].join(" ")
     }
 
